--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "aws-setup",
+  "name": "aws-clone",
   "version": "1.0.0",
-  "description": "",
-  "main": "dist/bin/aws-setup",
+  "description": "CLI for scaffolding AWS accounts and cloning their environments",
+  "main": "dist/bin/aws-clone.js",
   "scripts": {
     "compile": "./node_modules/.bin/babel src -d dist",
-    "dev": "./node_modules/.bin/babel-node src/bin/aws-setup.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "./node_modules/.bin/babel-node src/bin/aws-clone.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "npm run compile",
+    "start": "node dist/bin/aws-clone.js"
   },
-  "author": "",
+  "author": "Alexander Mays",
   "license": "ISC",
   "dependencies": {
     "@maysale01/flowjs": "0.0.8",
-    "aws": "0.0.3-2",
     "aws-sdk": "^2.2.30",
+    "babel-polyfill": "^6.3.14"
+  },
+  "devDependencies": {
     "babel-cli": "^6.4.0",
-    "babel-polyfill": "^6.3.14",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "debug": "^2.2.0",
     "dotenv": "^1.2.0",
-    "inquirer": "^0.11.2",
-    "lodash": "^4.0.0",
-    "promisify-node": "^0.3.0"
+    "inquirer": "^0.11.2"
   }
 }
